--- a/example.env
+++ b/example.env
@@ -2,5 +2,5 @@ TOKEN=123456:abcdefghijklmnopqrstuv
 API_ID=123456
 API_HASH=abcdefghijklmnopqrstuv
 
-#SNEHABHI SERVER 
-#KANGERS DON'T FORGET TO CREDIT @SNEHABHIxd
+#DESTEK @RapidDestek 
+#DEVELOPER @EfsaneLions
